[metadata]
name = fc2-live-dl
version = 2.0.0-rc.1
author = Hizkia Felix
author_email = felix@hizkifw.me
description = Download live streams from FC2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hizkifw/fc2-live-dl
project_urls =
    Bug Tracker = https://github.com/hizkifw/fc2-live-dl/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = .
python_requires = >=3.8
packages = find:
console_scripts =
    fc2-live-dl = fc2_live_dl.cli:main
install_requires =
    aiohttp >= 3.8.1
    aiodns >= 3.0.0

[options.packages.find]
where = .
