[metadata]
name = fc2-live-dl
version = 2.1.2
author = Hizkia Felix
author_email = felix@hizkifw.me
description = Download live streams from FC2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HoloArchivists/fc2-live-dl
project_urls =
    Bug Tracker = https://github.com/HoloArchivists/fc2-live-dl/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
package_dir =
    = .
python_requires = >=3.8
packages = find:
install_requires =
    aiohttp >= 3.8.1
    aiodns >= 3.0.0

[options.entry_points]
console_scripts =
    fc2-live-dl = fc2_live_dl:main
    autofc2 = fc2_live_dl.autofc2:main

[options.packages.find]
where = .
